Migrate to Component API